##
##  $Id: Makefile.am
##

include $(top_srcdir)/automake/compile.am

EXTRA_DIST=

noinst_LIBRARIES = libdrvmgr.a

libdrvmgr_a_SOURCES = drvmgr.c
libdrvmgr_a_SOURCES += drvmgr.h
libdrvmgr_a_SOURCES += drvmgr_drvinf.c
libdrvmgr_a_SOURCES += drvmgr_confdefs.h
libdrvmgr_a_SOURCES += drvmgr_list.c
libdrvmgr_a_SOURCES += drvmgr_list.h
libdrvmgr_a_SOURCES += drvmgr_print.c
libdrvmgr_a_SOURCES += drvmgr_res.c
libdrvmgr_a_SOURCES += drvmgr_rw.c
libdrvmgr_a_SOURCES += drvmgr_translate.c

include $(top_srcdir)/automake/local.am
